FFmpegfs NEWS

* FFmpegfs has been added to Debian 10 Buster Backports, Debian 11 Bullseye and
  Ubuntu 20.04. See INSTALL.md "Installation from repository" for details.

* Cool, there's an online review on Linux Uprising, you can read it here:
  https://www.linuxuprising.com/2020/03/ffmpegfs-is-fuse-based-filesystem-for.html

Preparing release 2.3

Important changes in 2.3 (2021-05-XX)

* Enhancement: Issue #81: If source format has no audio, and the target supports
  no video (e.g.WAV/MP3), the files have shown up zero sized. These will now not
  be visible when doing ls. When trying to open them "File not found" will be
  returned.
* Added "configure --enable-debug" to create binaries with debug symbols.
  Defaults to the optimised version.
* Feature: Issue #73: Cue sheet tracks now play "gapless" if played in order.
  Whenever a track is started, the next track will automatically be transcoded
  as well.
* Feature: Issue #66 and issue #82: Added cue sheet support. If a file with cue
  extension is found with the same name as a media file or if a cue sheet is
  embedded into it (a tag named CUESHEET), tracks defined in it will show up in a
  virtual directory.
* Feature: Issue #83: Character conversion for cue sheet files. Automatically
  detects the character encoding of the cue sheet. and converts as necessary.
* Feature: Issue #78: Duplicate ARTIST to ALBUMARTIST tag if empty
* Feature: Issue #79: Added Docker support.
* Fixed deprecation: 2021-03-17 - f7db77bd87 - lavc 58.133.100 - codec.h
  Deprecated av_init_packet()
* Fixed API compatitbility: Many pointers made const as of 2021-04-27. Although
  reasonable, this breaks API compatibility with versions older than 59.0.100,
* Bugfix: find_original "fallback" method did not correctly handle the new filename
  format (extension added, not the original one replaced).

Preparing release 2.2

Important changes in 2.2 (2021-02-06)

This is a maintenance release, bugfixes only.
